Se agrego una variable de productos, y se agregaron botones en el formproductos, asi como la funcionalidad de delete

--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -148,10 +148,12 @@
   <table id="tablaProductos" class="table table-borderless table-striped" style="width: 60rem; align-items: center;">
     <thead>
       <tr> 
+        <th scope="col">#ID</th>
         <th scope="col">Nombre</th>
         <th scope="col">Precio</th>
         <th scope="col">Descripcion</th>
         <th scope="col">Stock</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody id="tableRow">
