--- a/HTML/usuario.html
+++ b/HTML/usuario.html
@@ -98,7 +98,7 @@
       <input type="text" class="col-md-10" placeholder="Tu nuevo teléfono:">
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button>
       <button type="button" class="btn btn-primary" style="background-color:rgb(239, 207, 207);  color:rgb(28, 49, 94); border-color:rgb(239, 207, 207) ;">Guardar</button>
     </div>
   </div>
@@ -128,7 +128,7 @@
       <input type="text" class="col-md-10" placeholder="Ingresa tu dirección:">
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Cerrar</button>
+      <button type="button" class="btn btn-dark" data-bs-dismiss="modal" >Cerrar</button>
       <button type="button" class="btn btn-primary" style="background-color:rgb(239, 207, 207);  color:rgb(28, 49, 94); border-color:rgb(239, 207, 207) ;">Guardar</button>
     </div>
   </div>
