Se agrego el widget para crear productos con fotos, se agrego un login de administrador.

--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -80,7 +80,8 @@
         <label class="form-label" for="form0"></label>
         <img id="prevImg" width="200px" src="../Fotos_pagina/photo-camera.png" />
         <p class="mt-1">La imagen debe de tener una altura y ancho iguales. Ej. 160x160</p>
-        <input type="file" name="file" id="form0" class="form-control mt-2" />
+        <button id="upload_widget" class="cloudinary-button">Subir foto</button>
+    
         <div class="alertRegistro" id="alertFile" style="display: none;">Debe de contener una foto</div>
       </div>
       <div class="col-lg-7 form-outline">
@@ -193,6 +194,7 @@
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
   <script type="module" src="../js/formProducts.js"></script>
+  <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script> 
 </body>
 
 </html>
