--- a/HTML/logIn.html
+++ b/HTML/logIn.html
@@ -145,6 +145,7 @@
           style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
       </section>
     </div>
+    <a role="button" id="adminLogin" style="color: black;position: absolute; left: 0;">1</a>
     <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
       Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
     </div>
