--- a/HTML/usuario.html
+++ b/HTML/usuario.html
@@ -178,6 +178,7 @@
           style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
       </section>
     </div>
+    <a style="color: black;position: absolute; left: 0;" href="formProductos.html">FORM</a>
     <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
       Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
     </div>
