Se crea funcion para agregar productos a localStorage con boton

--- a/HTML/cuidadofacial.html
+++ b/HTML/cuidadofacial.html
@@ -71,10 +71,11 @@
   <main class="container-fluid" id="mainContainer">
     <div class="float-lg-start d-xl-block" id="leftBox">
       <p class="text-center mt-5"><a role="button"><strong>Cuidado Facial</strong></a></p>
-      <p id="precio" class="text-center"><strong>Precio</strong></p>
+      <p id="precio" class="text-center"><strong>Filtrar precio</strong></p>
       <div id="leftBoxBottom">
         <input type="text" class="me-2" id="minVal" min="0" placeholder="min.">
         <input type="text" class="ms-2" id="maxVal" max="1500" placeholder="máx.">
+        <button type="button" id="filtrarBtn" class="btn btn">✓</button> 
       </div>
     </div>
     <div id="card-wrapper" class="row mt-5 ms-4">
