Se agrego carrito a localstorage

--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/carrito.css">
-  <script src="../js/carrito.js" defer></script>
+  <script type="module" src="../js/carrito.js" defer></script>
   <title>NAOM</title>
 </head>
 
@@ -75,32 +75,6 @@
     <div class="row justify-content-around" id="carrito">
       <!-- User Articles -->
       <div class="text-center align-items col-lg-6 col-sm-12 pt-2" id="userArticles">
-        <!-- <p>Su carrito actualmente está vacío.</p>
-        <a href="./maquillaje.html">Continúe explorando aquí</a> -->
-        <div class="article">
-          <img class="img-article" src="../Fotos-productos/Art-15.png" alt="">
-          <div class="purchase-info">
-              <div class="article-info">
-                <p class="article-title">upsy daisy</p>
-                <p class="article-name">creme gel liner kit</p>
-              </div>
-              <div class="delete">
-                <span class="material-symbols-rounded">delete</span>
-              </div>
-              <div class="article-total">
-                <p>Cantidad: 1</p>
-                <p class="total-price">$495.00 MXN</p>
-              </div>
-              <div class="btnIncDec">
-                <div class="btn-commands">
-                  <span class="minus">-</span>
-                  <span class="num">01</span>
-                  <span class="plus">+</span>
-                </div>
-              </div>
-          </div>
-        </div>
-        
       </div>
       <!-- Summary-->
       <div id="resumen" class="col-lg-5 col-sm-12 mt-3">
